[package]
name = "jsmx"
version = "0.3.0"
authors = ["Andrew <andrew@subarctic.org>"]
license = "MIT"
description = "PubSub Message Passing for Rust with JSON"
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrew-johnson-4/jsmx"

[dependencies]
serde_json = "1.0"
lazy_static = "1.4.0"
